hphp/hack/test/full_fidelity/cases/test_xhp_attribute_enum_errors.php
<?hh //strict

class :Foo {
    attribute enum {} a; // error
    attribute enum {"xy", 'z', 123, 1.0} b; // legal
}
